Bug 782352 - Broadcast local io to onchange listeners. r=sicking